--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -17,7 +17,7 @@
 			Chicken
 		</div>
 		<p>
-			Indian cuisine uses the whole palette of flavors—spicy, sour, sweet, and hot all at the same time—making it something that wants to jump off the plateDon’t be afraid to start playing around with cooking Indian food at home. First, it’s important to understand the various dishes and flavors that make up Indian cuisine.There are a basic 20 to 30 spices that are used in many dishes—cumin, coriander, turmeric, and ginger, to name a few—and there are an infinite number of ways of using them. 
+				Indian cuisine uses the whole palette of flavors—spicy, sour, sweet, and hot all at the same time—making it something that wants to jump off the plateDon’t be afraid to start playing around with cooking Indian food at home. First, it’s important to understand the various dishes and flavors that make up Indian cuisine.There are a basic 20 to 30 spices that are used in many dishes. 
 		</p>
 		</section>
 	</div>
@@ -27,7 +27,7 @@
 			Beef
 		</div>
 		<p>
-			Indian cuisine uses the whole palette of flavors—spicy, sour, sweet, and hot all at the same time—making it something that wants to jump off the plateDon’t be afraid to start playing around with cooking Indian food at home. First, it’s important to understand the various dishes and flavors that make up Indian cuisine.There are a basic 20 to 30 spices that are used in many dishes—cumin, coriander, turmeric, and ginger, to name a few—and there are an infinite number of ways of using them. 
+				Indian cuisine uses the whole palette of flavors—spicy, sour, sweet, and hot all at the same time—making it something that wants to jump off the plateDon’t be afraid to start playing around with cooking Indian food at home. First, it’s important to understand the various dishes and flavors that make up Indian cuisine.There are a basic 20 to 30 spices that are used in many dishes.
 		</p>
 		</section>
 	</div>
@@ -37,7 +37,7 @@
 			Sushi
 		</div>
 		<p>
-			Indian cuisine uses the whole palette of flavors—spicy, sour, sweet, and hot all at the same time—making it something that wants to jump off the plateDon’t be afraid to start playing around with cooking Indian food at home. First, it’s important to understand the various dishes and flavors that make up Indian cuisine.There are a basic 20 to 30 spices that are used in many dishes—cumin, coriander, turmeric, and ginger, to name a few—and there are an infinite number of ways of using them.  
+			Indian cuisine uses the whole palette of flavors—spicy, sour, sweet, and hot all at the same time—making it something that wants to jump off the plateDon’t be afraid to start playing around with cooking Indian food at home. First, it’s important to understand the various dishes and flavors that make up Indian cuisine.There are a basic 20 to 30 spices that are used in many dishes.  
 		</p>
 		</section>
 	</div>
